<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_banner"
        android:title="@string/manage_banners" />
    <item
        android:id="@+id/nav_categories"
        android:title="@string/add_edit_category" />
    <item
        android:id="@+id/nav_lab_tests"
        android:title="@string/add_edit_lab_test" />
    <item
        android:id="@+id/nav_products"
        android:title="@string/add_edit_product" />
    <item
        android:id="@+id/nav_users"
        android:title="@string/manage_users" />
    <item
        android:id="@+id/nav_orders"
        android:title="@string/manage_orders" />
    <item
        android:id="@+id/nav_notifications"
        android:title="@string/send_notifications" />
    <item
        android:id="@+id/nav_scanner"
        android:title="@string/scanner_settings" />
    <item
        android:id="@+id/nav_logout"
        android:title="@string/logout" />
</menu>